LibSIMD/GMS_sse_matrix.h



typedef struct __declspec(align(16))  V1x4f32 {
		float v[4];
 }V1x4f32;


void V1x4f32_product(struct V1x4f32 * __restrict,
					 const struct V1x4f32 * __restrict,
					 const struct V1x4f32 * __restrict);


void V1x4f32_product_inplace(struct V1x4f32 * __restrict,
							 const struct V1x4f32 * __restrict);


void V1x4f32_mul_scalar(struct V1x4f32 * __restrict ,
					    const struct V1x4f32 * __restrict,
						const float);


void V1x4f32_add_V1x4f32(struct V1x4f32 * __restrict,
						 const struct V1x4f32 * __restrict,
						 const struct V1x4f32 * __restrict);


void V1x4f32_add_V1x4f32_inplace(struct V1x4f32 * __restrict,
								 const struct V1x4f32 * __restrict);


void V1x4f32_sub_V1x4f32(struct V1x4f32 * __restrict,
						 const struct V1x4f32 * __restrict,
						 const struct V1x4f32 * __restrict);


void V1x4f32_sub_V1x4f32_inplace(struct V1x4f32 * __restrict,
							     const struct V1x4f32 * __restrict);


void V1x4f32_dot(float * ,
				 const struct V1x4f32 * __restrict,
				 const struct V1x4f32 * __restrict);


void V1x4f32_cross(struct V1x4f32 * __restrict,
				   const struct V1x4f32 * __restrict,
				   const struct V1x4f32 * __restrict);