Mathematics/GMS_sse_matrix.f90

    
    interface
         subroutine V1x4f32_product(vc,vb,va) &
                               bind(c,name='V1x4f32_product')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: vc
                    type(V1x4f32), intent(in)    :: vb
                    type(V1x4f32), intent(in)    :: va
         end subroutine V1x4f32_product
    end interface
    
    interface
        subroutine V1x4f32_product_inplace(vb,va) &
                               bind(c,name='V1x4f32_product_inplace')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: vb
                    type(V1x4f32), intent(in)    :: va
        end subroutine V1x4f32_product_inplace
    end interface
    
    interface
        subroutine V1x4f32_mul_scalar(vb,va,s) &
                                bind(c,name='V1x4f32_mul_scalar')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    type(V1x4f32), intent(inout)     :: vb
                    type(V1x4f32), intent(in)        :: va
                    real(c_float), intent(in), value :: s
        end subroutine V1x4f32_mul_scalar
    end interface
    
    interface
        subroutine V1x4f32_add_V1x4f32(vc,vb,va) &
                               bind(c,name='V1x4f32_add_V1x4f32')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: vc
                    type(V1x4f32), intent(in)    :: vb
                    type(V1x4f32), intent(in)    :: va
        end subroutine V1x4f32_add_V1x4f32
    end interface
    
    interface
        subroutine V1x4f32_add_V1x4f32_inplace(vb,va) &
                               bind(c,name='V1x4f32_add_V1x4f32_inplace')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: vb
                    type(V1x4f32), intent(in)    :: va
        end subroutine V1x4f32_add_V1x4f32_inplace
    end interface
    
     interface
        subroutine V1x4f32_sub_V1x4f32(vc,vb,va) &
                               bind(c,name='V1x4f32_sub_V1x4f32')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: vc
                    type(V1x4f32), intent(in)    :: vb
                    type(V1x4f32), intent(in)    :: va
        end subroutine V1x4f32_sub_V1x4f32
    end interface
    
    interface
        subroutine V1x4f32_sub_V1x4f32_inplace(vb,va) &
                               bind(c,name='V1x4f32_sub_V1x4f32_inplace')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: vb
                    type(V1x4f32), intent(in)    :: va
        end subroutine V1x4f32_sub_V1x4f32_inplace
    end interface
    
    interface
         subroutine V1x4f32_dot(d,vb,va) &
                            bind(c,name='V1x4f32_dot')
                    use, intrinsic :: ISO_C_BINDING
                    import :: V1x4f32
                    real(c_float), intent(inout) :: d
                    type(V1x4f32), intent(in)    :: vb,va
         end subroutine V1x4f32_dot
    end interface
    
    interface
         subroutine V1x4f32_cross(vc,vb,va) &
                            bind(c,name='V1x4f32_cross')
                    import :: V1x4f32
                    type(V1x4f32), intent(inout) :: vc
                    type(V1x4f32), intent(in)    :: vb
                    type(V1x4f32), intent(in)    :: va
         end subroutine V1x4f32_cross
    end interface
    
end module mod_sse_matrix